v0.0.2: base64 encoding done now by internal library, rather than external [84343016]